--- a/app/src/main/res/layout-large/home_picture_item.xml
+++ b/app/src/main/res/layout-large/home_picture_item.xml
@@ -4,8 +4,8 @@
 
     <ImageView
         android:layout_marginTop="5dp"
-        android:layout_width="200dp"
-        android:layout_height="match_parent"
+        android:layout_width="150dp"
+        android:layout_height="200dp"
         android:id="@+id/image_list_item"
         android:layout_marginRight="10dp"/>
 
