--- a/app/src/main/res/layout-large/picture_item.xml
+++ b/app/src/main/res/layout-large/picture_item.xml
@@ -4,7 +4,7 @@
 
     <ImageView
         android:layout_marginTop="5dp"
-        android:layout_width="match_parent"
+        android:layout_width="100dp"
         android:layout_height="100dp"
         android:id="@+id/image_list_item"/>
 
